--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta name="description" content="">
 <meta name="author" content="">
 
-<title>Instituto Xamânico Céu Viva Vida na Luz do Mestre Jesus e Instituto Luz e Caridade</title>
+<title>Instituto Luz e Caridade e Instituto Viva Vida</title>
 
 <!-- Bootstrap Core CSS -->
 <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -67,7 +67,7 @@
 	<header>
 		<div class="container">
 			<div class="intro-text">
-				<div class="intro-lead-in">Bem-vindo ao Céu Viva Vida na Luz do Mestre Jesus e Instituto Luz e Caridade</div>
+				<div class="intro-lead-in">Bem-vindo ao Instituto Luz e Caridade e Instituto Viva Vida</div>
 				<div class="intro-heading">Que bom que você veio</div>
 				<a href="#agenda" class="page-scroll btn btn-xl">Me conte mais</a>
 			</div>
