--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 			<div class="row">
 				<div class="col-lg-12 text-center">
 					<p class="large text-muted">Sejam bem vindos ao Instituto Xamânico Céu Viva Vida na Luz do Mestre Jesus e Instituto Luz e Caridade</p>
-					<p class="large text-muted">A Ayahuasca  é feita simplesmente com a folha rainha Chacrona, o cipó Jagube, água, fogo, e muito AMOR!</p>
+					<p class="large text-muted">A Ayahuasca  é feita simplesmente com a folha rainha Chacrona, o cipó Jagube (Mariri), água, fogo, e muito AMOR!</p>
 					<p class="large text-muted">O xamanismo não é religião, é um caminho para o conhecimento. O reconhecimento do caminho da verdade vem da expansão da consciência e a compreensão de que o verdadeiro poder está dentro de cada praticante e provém do desenvolvimento de seus próprios dons.</p> 
 					<p class="large text-muted">Inspirados na sabedoria dos povos ancestrais, temos o desafio de resgatar o conhecimento acumulado nas práticas xamânicas das diversas tradições do planeta para os dias atuais. Assim, pretendemos contribuir para a saúde, autoconhecimento e o bem-estar geral do nosso povo e resgatar valores para uma vida mais harmônica.</p>
 					<p class="large text-muted">O xamanismo é o reencontro consigo mesmo. É a busca do Equilíbrio.</p>
