--- a/index.html
+++ b/index.html
@@ -75,11 +75,12 @@
 	</header>
 
 
-	<!-- Normas Section -->
+	<!-- Intro Section -->
 	<section id="intro">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 text-center">
+					<h2>Bem-vindo</h2>
 					<p class="large text-muted">Sejam bem vindos ao Instituto Xamânico Céu Viva Vida na Luz do Mestre Jesus e Instituto Luz e Caridade</p>
 					<p class="large text-muted">A Ayahuasca  é feita simplesmente com a folha rainha Chacrona, o cipó Jagube (Mariri), água, fogo, e muito AMOR!</p>
 					<p class="large text-muted">O xamanismo não é religião, é um caminho para o conhecimento. O reconhecimento do caminho da verdade vem da expansão da consciência e a compreensão de que o verdadeiro poder está dentro de cada praticante e provém do desenvolvimento de seus próprios dons.</p> 
@@ -106,6 +107,23 @@
 					<ul class="timeline">
 						<li>
 							<div class="timeline-image">
+								<a href="#ayahuasca20151031" class="portfolio-link" data-toggle="modal"> <img class="img-circle img-responsive" src="img/rituais/ayahuasca_icon.jpg" alt="">
+								</a>
+							</div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h4>Sábado - 23 de Abril de 2016</h4>
+									<h4 class="subheading">Meditação com Ayahuasca</h4>
+								</div>
+								<div class="timeline-body">
+									<p class="text-muted">
+										Início as 21h00 em Mairiporã.<br />Abertura dos portões as 19h e fechamento as 20h30.
+									</p>
+								</div>
+							</div>
+						</li>
+						<li class="timeline-inverted">
+							<div class="timeline-image">
 								<img class="img-circle img-responsive" src="img/rituais/evangelho_icon.jpg" alt="">
 							</div>
 							<div class="timeline-panel">
@@ -114,24 +132,7 @@
 									<h4 class="subheading">Estudo do Evangelho</h4>
 								</div>
 								<div class="timeline-body">
-									<p class="text-muted">Estudo do Evangelho segundo o Espiritismo. Permita-se conhecer mais sobre o evangelho.</p>
-								</div>
-							</div>
-						</li>
-						<li class="timeline-inverted">
-							<div class="timeline-image">
-								<a href="#ayahuasca20151031" class="portfolio-link" data-toggle="modal"> <img class="img-circle img-responsive" src="img/rituais/ayahuasca_icon.jpg" alt="">
-								</a>
-							</div>
-							<div class="timeline-panel">
-								<div class="timeline-heading">
-									<h4>Sábado - 31 de Outubro de 2015</h4>
-									<h4 class="subheading">Meditação com Ayahuasca</h4>
-								</div>
-								<div class="timeline-body">
-									<p class="text-muted">
-										21h00 em Mairiporã. Por favor, chegue pontualmente.<br />Portões abertos a partir das 19h30.
-									</p>
+									<p class="text-muted">Início pontualmente as 21h30.<br />Estudo do Evangelho segundo o Espiritismo. Permita-se conhecer mais sobre o evangelho.</p>
 								</div>
 							</div>
 						</li>
@@ -302,7 +303,7 @@
 	</section>
 
 	<!-- Portfolio Grid Section -->
-	<section id="rituais" class="bg-light-gray">
+	<section id="rituais" class="bg-light-gray" style="display:none">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 text-center">
@@ -362,7 +363,7 @@
 			</div>
 			<div class="text-center">
 				<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#maisInfo">Ler Normas</button>
-				<div id="maisInfo" class="collapse">
+				<div id="maisInfo" class="collapse in">
 					<p class="large text-muted">Aqui Neste INSTITUTO Espiritual é expressamente PROIBIDO portar qualquer droga, cigarro ou álcool.</p>
 					<p class="large text-muted">Nunca esquecer que é um trabalho espiritual, O SILÊNCIO É FUNDAMENTAL, traga Seriedade, Respeito e Disciplina!</p>
 					<p class="large text-muted">Todos são obrigados a apresentar documento com foto (RG, carteira trabalho ou de motorista)</p>
@@ -370,7 +371,7 @@
 						Menores devem estar acompanhados por um dos responsáveis legais ou com autorização por escrito com firma reconhecida em Cartório.<br /> <a
 							href="http://www.ceuluzecaridade.com.br/imagens/Autoriza%E7%E3oMenor-Modelo.doc">(clique aqui para imprimir o modelo)</a>
 					</p>
-					<p class="large text-muted">Trazer colchonete e cobertor.</p>
+					<p class="large text-muted">Trazer colchonete e cobertor pois na serra faz muito frio.</p>
 					<p class="large text-muted">Mulheres vestidas discretamente com blusa sem decote e saia longa (pode-se usar por cima de calça comprida ou shorts).</p>
 					<p class="large text-muted">Homens vestidos com calça comprida e camiseta de manga (não é permitido bermudas nem regatas). Roupas de cores claras</p>
 
@@ -461,7 +462,8 @@
 					<h2 class="section-white">Contato</h2>
 					<h3 class="section-white text-muted">Entre em contato conosco!</h3>
 					<h4 class="section-white text-muted">
-						Tels: (11) 5063-0257 (Horário Comercial) - Padrinho Luiz: (11) 94746-6568<br />
+						Padrinho Luiz: (11) 94746-6568 <img src="img/whatsapp.png" width="18px" height="18px"/><br /><br />
+						Padrinho Carlão: <img src=""/>(11) 98793-0810 <img src="img/whatsapp.png" width="18px" height="18px"/><br />
 						<br /> Rua Don Pedro de Alcântara, 430 - Mairiporã - São Paulo (Antiga Rua 01)<br />
 						<br /> Emails de contato: <a href="mailto:marciafilipe00@hotmail.com">marciafilipe00@hotmail.com</a>
 						<br /> <a href="mailto:marciafilipe00@hotmail.com">ceuvivavida@gmail.com</a>
