--- a/index.html
+++ b/index.html
@@ -461,6 +461,9 @@
 				<div class="col-lg-12 text-center">
 					<h2 class="section-white">Contato</h2>
 					<h3 class="section-white text-muted">Entre em contato conosco!</h3>
+					<ul class="list-inline social-buttons">
+						<li><a href="https://www.facebook.com/C%C3%A9u-Viva-a-Vida-C%C3%A9u-Luz-e-Caridade-597612943629591/?fref=ts"><i class="fa fa-facebook"></i></a></li>
+					</ul><br/>
 					<h4 class="section-white text-muted">
 						Padrinho Luiz: (11) 94746-6568 <img src="img/whatsapp.png" width="18px" height="18px"/><br /><br />
 						Padrinho Carlão: <img src=""/>(11) 98793-0810 <img src="img/whatsapp.png" width="18px" height="18px"/><br />
