--- a/index.html
+++ b/index.html
@@ -93,6 +93,27 @@
 		</div>
 	</section>
 
+
+	<!-- Leitura Section -->
+	<section id="leitura">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12 text-center">
+					<h2>Leitura</h2>
+					<p class="large text-muted">&nbsp;</p>
+					<h3>OBSTÁCULOS</h3>
+					<p class="large text-muted">Certo dia, um rei ordenara que se colocasse uma pedra enorme no meio de uma das estradas de seu reino.</p>
+					<div id="divleitura1" class="collapse">
+					<p class="large text-muted">Então, o rei se escondera próximo ao local para ficar observando se alguém tiraria a imensa rocha do caminho. Alguns mercadores e homens muito ricos do reino passaram por ali e simplesmente deram a volta pela pedra. Alguns até esbravejaram contra o rei, dizendo que ele não mantinha as estradas limpas, mas nenhum deles tentou sequer mover a pedra dali.</p>
+					<p class="large text-muted">De repente, passa um camponês com uma boa carga de vegetais. Ao se aproximar da imensa rocha, ele põe de lado a sua carga e tenta remover a rocha dali. Após muito esforço e suor, ele finalmente consegue mover a pedra para fora da estrada. Então, o camponês volta a pegar sua carga de vegetais, quando nota que havia uma bolsa no local onde, pouco antes, estava a pedra. A bolsa continha muitas moedas de ouro e uma nota escrita pelo rei, que dizia que o ouro era para a pessoa que tivesse removido a pedra do caminho.</p> 
+					<p class="large text-muted">O camponês aprendeu o que muitos de nós nunca entendemos: todo obstáculo contém uma oportunidade para melhorarmos nossa condição .</p>
+					</div>
+					<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#divleitura1">Ler Mais</button>
+				</div>
+			</div>
+		</div>
+	</section>
+
 	<!-- About Section -->
 	<section id="agenda">
 		<div class="container">
@@ -362,14 +383,15 @@
 				</div>
 			</div>
 			<div class="text-center">
-				<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#maisInfo">Ler Normas</button>
+				<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#maisInfo" style="display:none">Ler Normas</button>
+				
 				<div id="maisInfo" class="collapse in">
 					<p class="large text-muted">Aqui Neste INSTITUTO Espiritual é expressamente PROIBIDO portar qualquer droga, cigarro ou álcool.</p>
 					<p class="large text-muted">Nunca esquecer que é um trabalho espiritual, O SILÊNCIO É FUNDAMENTAL, traga Seriedade, Respeito e Disciplina!</p>
 					<p class="large text-muted">Todos são obrigados a apresentar documento com foto (RG, carteira trabalho ou de motorista)</p>
 					<p class="large text-muted">
 						Menores devem estar acompanhados por um dos responsáveis legais ou com autorização por escrito com firma reconhecida em Cartório.<br /> <a
-							href="http://www.ceuluzecaridade.com.br/imagens/Autoriza%E7%E3oMenor-Modelo.doc">(clique aqui para imprimir o modelo)</a>
+							href="docs/Autoriza%E7%E3oMenor-Modelo.doc">(clique aqui para imprimir o modelo)</a>
 					</p>
 					<p class="large text-muted">Trazer colchonete e cobertor pois na serra faz muito frio.</p>
 					<p class="large text-muted">Mulheres vestidas discretamente com blusa sem decote e saia longa (pode-se usar por cima de calça comprida ou shorts).</p>
