--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 			<div class="intro-text">
 				<div class="intro-lead-in">Bem-vindo ao Instituto Luz e Caridade e Instituto Viva Vida</div>
 				<div class="intro-heading">Que bom que você veio</div>
-				<a href="#agenda" class="page-scroll btn btn-xl">Me conte mais</a>
+				<a href="#proximos_eventos" class="page-scroll btn btn-xl">Me conte mais</a>
 			</div>
 		</div>
 	</header>
@@ -88,6 +88,19 @@
 					<p class="large text-muted">O xamanismo é o reencontro consigo mesmo. É a busca do Equilíbrio.</p>
 					<p class="large text-muted">“AQUI NÃO É PERMITIDO PORTAR NENHUM TIPO DE DROGAS, CIGARROS E BEBIDAS ALCOÓLICAS!”</p>
 				
+				</div>
+			</div>
+		</div>
+	</section>
+
+
+	<!-- Intro Section -->
+	<section id="proximos_eventos">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12 text-center">
+					<h2>Próximos Rituais</h2>
+					<img src="img/rituais/ceuvidavida-20160404.jpg">				
 				</div>
 			</div>
 		</div>
@@ -128,6 +141,24 @@
 					<ul class="timeline">
 						<li>
 							<div class="timeline-image">
+								<a href="#ayahuasca20151031" class="portfolio-link" data-toggle="modal"> <img class="img-circle img-responsive" src="img/rituais/ceuvivavida-20160404-icon.jpg" alt="">
+								</a>
+							</div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h4>Segunda-Feira - 04 de Abril de 2016</h4>
+									<h4 class="subheading">Ritual de Curas e Bençãos</h4>
+									<h4 class="subheading">Meditação com Ayahuasca</h4>
+								</div>
+								<div class="timeline-body">
+									<p class="text-muted">
+										Início pontualmente as 20h30.<br />Abertura dos portões as 19h e fechamento as 20h15.
+									</p>
+								</div>
+							</div>
+						</li>
+						<li class="timeline-inverted">
+							<div class="timeline-image">
 								<a href="#ayahuasca20151031" class="portfolio-link" data-toggle="modal"> <img class="img-circle img-responsive" src="img/rituais/ayahuasca_icon.jpg" alt="">
 								</a>
 							</div>
@@ -143,7 +174,7 @@
 								</div>
 							</div>
 						</li>
-						<li class="timeline-inverted">
+						<li>
 							<div class="timeline-image">
 								<img class="img-circle img-responsive" src="img/rituais/evangelho_icon.jpg" alt="">
 							</div>
@@ -157,7 +188,7 @@
 								</div>
 							</div>
 						</li>
-						<li>
+						<li class="timeline-inverted">
 							<div class="timeline-image">
 								<img class="img-circle img-responsive" src="img/rituais/tendadosuor_icon.jpg" alt="">
 							</div>
@@ -171,7 +202,7 @@
 								</div>
 							</div>
 						</li>
-						<li class="timeline-inverted">
+						<li>
 							<div class="timeline-image">
 								<img class="img-circle img-responsive" src="img/rituais/cachimbo_icon.jpg" alt="">
 							</div>
@@ -390,7 +421,7 @@
 					<p class="large text-muted">Nunca esquecer que é um trabalho espiritual, O SILÊNCIO É FUNDAMENTAL, traga Seriedade, Respeito e Disciplina!</p>
 					<p class="large text-muted">Todos são obrigados a apresentar documento com foto (RG, carteira trabalho ou de motorista)</p>
 					<p class="large text-muted">
-						Menores devem estar acompanhados por um dos responsáveis legais ou com autorização por escrito com firma reconhecida em Cartório.<br /> <a
+						Menores devem estar acompanhados por um dos responsáveis legais ou com autorização por escrito com firma reconhecida em Cartório.<br /> <a class="a-blue"
 							href="docs/Autoriza%E7%E3oMenor-Modelo.doc">(clique aqui para imprimir o modelo)</a>
 					</p>
 					<p class="large text-muted">Trazer colchonete e cobertor pois na serra faz muito frio.</p>
