alterando nome doc menor

--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
 					<p class="large text-muted">Todos são obrigados a apresentar documento com foto (RG, carteira trabalho ou de motorista)</p>
 					<p class="large text-muted">
 						Menores devem estar acompanhados por um dos responsáveis legais ou com autorização por escrito com firma reconhecida em Cartório.<br /> <a class="a-blue"
-							href="docs/Autoriza%E7%E3oMenor-Modelo.doc">(clique aqui para imprimir o modelo)</a>
+							href="docs/AutorizacaoMenor.doc">(clique aqui para imprimir o modelo)</a>
 					</p>
 					<p class="large text-muted">Trazer colchonete e cobertor pois na serra faz muito frio.</p>
 					<p class="large text-muted">Mulheres vestidas discretamente com blusa sem decote e saia longa (pode-se usar por cima de calça comprida ou shorts).</p>
