--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 			<div class="row">
 				<div class="col-lg-12 text-center">
 					<h2>Próximos Rituais</h2>
-					<img src="img/rituais/ceuvidavida-20160404.jpg">				
+					<img width="300px" src="img/rituais/ceuvidavida-20160404.jpg">				
 				</div>
 			</div>
 		</div>
