--- a/index.html
+++ b/index.html
@@ -99,8 +99,10 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 text-center">
-					<h2>Próximos Rituais</h2>
-					<img src="img/rituais/ceuvidavida-20160404.jpg">		
+					<div style="max-width: 500px; align: center">
+						<h2>Próximos Rituais</h2>
+						<img width="100%" src="img/rituais/ceuvidavida-20160404.jpg">	
+					</div>	
 				</div>
 			</div>
 		</div>
