Vivencia Xamanica Abril 2016

--- a/eventos/vivencia_xamanica_abril_2016.html
+++ b/eventos/vivencia_xamanica_abril_2016.html
@@ -9,13 +9,13 @@
 <meta name="description" content="">
 <meta name="author" content="">
 
-<title>Instituto Luz e Caridade e Instituto Viva Vida</title>
+<title>CLC e CVV - Vivência Xamânica - Abril de 2016</title>
 
 <!-- Bootstrap Core CSS -->
-<link href="css/bootstrap.min.css" rel="stylesheet">
+<link href="../css/bootstrap.min.css" rel="stylesheet">
 
 <!-- Custom CSS -->
-<link href="css/agency.css" rel="stylesheet">
+<link href="../css/agency.css" rel="stylesheet">
 
 <!-- Custom Fonts -->
 <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -34,53 +34,29 @@
 </head>
 
 <body id="page-top" class="index">
-
-	<!-- Navigation -->
-	<nav class="navbar navbar-default navbar-fixed-top">
-		<div class="container">
-			<!-- Brand and toggle get grouped for better mobile display -->
-			<div class="navbar-header page-scroll">
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-					<span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span>
-				</button>
-				<a class="navbar-brand page-scroll" href="#page-top">Céu</a>
-			</div>
-
-			<!-- Collect the nav links, forms, and other content for toggling -->
-			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-				<ul class="nav navbar-nav navbar-right">
-					<li class="hidden"><a href="#page-top"></a></li>
-					<li><a class="page-scroll" href="#instituto">Instituto</a></li>
-					<li><a class="page-scroll" href="#ayahuasca">Ayahuasca</a></li>
-					<li><a class="page-scroll" href="#rituais">Rituais</a></li>
-					<li><a class="page-scroll" href="#normas">Normas</a></li>
-					<li><a class="page-scroll" href="#equipe">Equipe</a></li>
-					<li><a class="page-scroll" href="#contato">Contato</a></li>
-				</ul>
-			</div>
-			<!-- /.navbar-collapse -->
-		</div>
-		<!-- /.container-fluid -->
-	</nav>
-
 	<!-- Header -->
-	<header>
+	<header  style="display:inline">
 		<div class="container">
 			<div class="intro-text">
-				<div class="intro-lead-in">Bem-vindo ao Instituto Luz e Caridade e Instituto Viva Vida</div>
-				<div class="intro-heading">Que bom que você veio</div>
-				<a href="#proximos_eventos" class="page-scroll btn btn-xl">Me conte mais</a>
+				<div class="intro-lead-in">Vivência Xamânica</div>
+				<div class="col-lg-12 text-center">
+					<p class="large text-muted">Estaremos</p>
+					<p class="large text-muted">A Ayahuasca  é feita simplesmente com a folha rainha Chacrona, o cipó Jagube (Mariri), água, fogo, e muito AMOR!</p>
+					<p class="large text-muted">O xamanismo não é religião, é um caminho para o conhecimento. O reconhecimento do caminho da verdade vem da expansão da consciência e a compreensão de que o verdadeiro poder está dentro de cada praticante e provém do desenvolvimento de seus próprios dons.</p> 
+					<p class="large text-muted">Inspirados na sabedoria dos povos ancestrais, temos o desafio de resgatar o conhecimento acumulado nas práticas xamânicas das diversas tradições do planeta para os dias atuais. Assim, pretendemos contribuir para a saúde, autoconhecimento e o bem-estar geral do nosso povo e resgatar valores para uma vida mais harmônica.</p>
+					<p class="large text-muted">O xamanismo é o reencontro consigo mesmo. É a busca do Equilíbrio.</p>
+					<p class="large text-muted">“AQUI NÃO É PERMITIDO PORTAR NENHUM TIPO DE DROGAS, CIGARROS E BEBIDAS ALCOÓLICAS!”</p>
+				
+				</div>
 			</div>
 		</div>
 	</header>
-
 
 	<!-- Intro Section -->
 	<section id="intro">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 text-center">
-					<h2>Bem-vindo</h2>
 					<p class="large text-muted">Sejam bem vindos ao Instituto Xamânico Céu Viva Vida na Luz do Mestre Jesus e Instituto Luz e Caridade</p>
 					<p class="large text-muted">A Ayahuasca  é feita simplesmente com a folha rainha Chacrona, o cipó Jagube (Mariri), água, fogo, e muito AMOR!</p>
 					<p class="large text-muted">O xamanismo não é religião, é um caminho para o conhecimento. O reconhecimento do caminho da verdade vem da expansão da consciência e a compreensão de que o verdadeiro poder está dentro de cada praticante e provém do desenvolvimento de seus próprios dons.</p> 
@@ -101,14 +77,8 @@
 				<div class="col-lg-12 text-center">
 					<div style="max-width: 500px; align: center">
 						<h2>Próximos Rituais</h2>
-						<img width="100%" src="img/rituais/vivencia-xamanica-abril-16.jpg">	
-					</div>
-				</div>
-				<div class="col-lg-12 text-center">
-					<div style="max-width: 500px; align: center">
-						<p>&nbsp;</p>
-						<p><a class="a-blue" href="docs/vivencia-xamanica-abril-16.docx">Baixe o documento com os detalhes aqui!</a></p>
-					</div>
+						<img width="100%" src="img/rituais/ceuvidavida-20160404.jpg">	
+					</div>	
 				</div>
 			</div>
 		</div>
@@ -154,13 +124,13 @@
 							</div>
 							<div class="timeline-panel">
 								<div class="timeline-heading">
-									<h4>Feriado Quinta 21, 22, 23 e 24 de Abril</h4>
-									<h4 class="subheading">Vivência Xamânica</h4>
+									<h4>Segunda-Feira - 04 de Abril de 2016</h4>
+									<h4 class="subheading">Ritual de Curas e Bençãos</h4>
+									<h4 class="subheading">Meditação com Ayahuasca</h4>
 								</div>
 								<div class="timeline-body">
 									<p class="text-muted">
-										Início às 10h00<br />
-										Energia de Troca R$ 150,00
+										Início pontualmente as 20h30.<br />Abertura dos portões as 19h e fechamento as 20h15.
 									</p>
 								</div>
 							</div>
@@ -177,8 +147,7 @@
 								</div>
 								<div class="timeline-body">
 									<p class="text-muted">
-										Início pontualmente às 17h00<br />
-										Energia de Troca R$ 50,00
+										Início as 21h00 em Mairiporã.<br />Abertura dos portões as 19h e fechamento as 20h30.
 									</p>
 								</div>
 							</div>
