--- a/eventos/vivencia_xamanica_abril_2016.html
+++ b/eventos/vivencia_xamanica_abril_2016.html
@@ -34,19 +34,67 @@
 </head>
 
 <body id="page-top" class="index">
+	<!-- Navigation -->
+	<nav class="navbar navbar-default navbar-fixed-top">
+		<div class="container">
+			<!-- Brand and toggle get grouped for better mobile display -->
+			<div class="navbar-header page-scroll">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+					<span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand page-scroll" href="#page-top">Céu</a>
+			</div>
+
+			<!-- Collect the nav links, forms, and other content for toggling -->
+			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+				<ul class="nav navbar-nav navbar-right">
+					<li class="hidden"><a href="#page-top"></a></li>
+					<li><a class="page-scroll" href="#instituto">Instituto</a></li>
+					<li><a class="page-scroll" href="#ayahuasca">Ayahuasca</a></li>
+					<li><a class="page-scroll" href="#rituais">Rituais</a></li>
+					<li><a class="page-scroll" href="#normas">Normas</a></li>
+					<li><a class="page-scroll" href="#equipe">Equipe</a></li>
+					<li><a class="page-scroll" href="#contato">Contato</a></li>
+				</ul>
+			</div>
+			<!-- /.navbar-collapse -->
+		</div>
+		<!-- /.container-fluid -->
+	</nav>
+
+
 	<!-- Header -->
 	<header  style="display:inline">
 		<div class="container">
 			<div class="intro-text">
 				<div class="intro-lead-in">Vivência Xamânica</div>
 				<div class="col-lg-12 text-center">
-					<p class="large text-muted">Estaremos</p>
-					<p class="large text-muted">A Ayahuasca  é feita simplesmente com a folha rainha Chacrona, o cipó Jagube (Mariri), água, fogo, e muito AMOR!</p>
-					<p class="large text-muted">O xamanismo não é religião, é um caminho para o conhecimento. O reconhecimento do caminho da verdade vem da expansão da consciência e a compreensão de que o verdadeiro poder está dentro de cada praticante e provém do desenvolvimento de seus próprios dons.</p> 
-					<p class="large text-muted">Inspirados na sabedoria dos povos ancestrais, temos o desafio de resgatar o conhecimento acumulado nas práticas xamânicas das diversas tradições do planeta para os dias atuais. Assim, pretendemos contribuir para a saúde, autoconhecimento e o bem-estar geral do nosso povo e resgatar valores para uma vida mais harmônica.</p>
-					<p class="large text-muted">O xamanismo é o reencontro consigo mesmo. É a busca do Equilíbrio.</p>
-					<p class="large text-muted">“AQUI NÃO É PERMITIDO PORTAR NENHUM TIPO DE DROGAS, CIGARROS E BEBIDAS ALCOÓLICAS!”</p>
-				
+					<p>Estaremos fazendo uma viagem em nossa MORADA INTERIOR, vamos trabalhar nosso SILENCIO, onde é possível manter o dialogo com DEUS.</p>
+					<p>Nossa introspecção acontecerá com os Rituais Xamanicos, Atividades Diárias, Videos, Palestras , Ritual do Cachimbo e Tenda do Suor (Encontro com a Mãe Terra ) .</p>
+					<p>Inicio : 21 de Abril ás 10:00 horas</p>
+					<p>Término : 24 de Abril ás 13:00 Horas</p>
+					<p>Energia de Troca : R$ 150,00</p>
+					<p> </p>
+					<p>RITUAL “ABERTO”  COMEMORAÇÃO DE ANIVERSÁRIO – 23 DE ABRIL</p>
+					<p>Os portões estarão abertos a partir das 16:00 horas , o Ritual iniciará as 17:00 horas pontualmente.</p>
+					<p>Energia de Troca : R$ 50,00</p>
+					<p> </p>
+					<p>Para maior comodidade e organização do espaço, pedimos aos interessados, sua confirmação na vivência e o deposito na conta abaixo até 15/04/2016 de 50% valor e restante em sua chegada.</p>
+					<p>Enviar confirmação via e-mail : marciafilipe00@hotmail.com</p>
+					<p>Banco Bradesco</p>
+					<p>Agencia : 00090</p>
+					<p>Conta Corrente : 0166738-6</p>
+					<p>Luiz Carlos Fernandes Carneiro</p>
+					<p>CPF : 257.468.708-62</p>
+					<p>Nota : enviar confirmação via e-mail : marciafilipe00@hotmail.com</p>
+					<p>O QUE LEVAR :</p>
+					<p>Os participantes devem levar produtos  de higiene pessoal , colchonete e cobertor.</p>
+					<p>03 trocas de roupa,  devido ao calor .</p>
+					<p>Homens : Calça e Camiseta .</p>
+					<p>Mulheres : Saia, Calça Legging e camiseta .</p>
+					<p>AMBOS : 01 bermuda e camiseta velha para uso na TENDA DO SUOR .</p>
+					<p>Levar um tênis e um chinelo confortável .</p>
+					<p>Não se esqueçam do repelente.</p>
 				</div>
 			</div>
 		</div>
@@ -119,7 +167,7 @@
 					<ul class="timeline">
 						<li>
 							<div class="timeline-image">
-								<a href="#ayahuasca20151031" class="portfolio-link" data-toggle="modal"> <img class="img-circle img-responsive" src="img/rituais/ceuvivavida-20160404-icon.jpg" alt="">
+								<a href="#ayahuasca20160404" class="portfolio-link" data-toggle="modal"> <img class="img-circle img-responsive" src="img/rituais/vivencia-xamanica-abril-16-icon.jpg" alt="">
 								</a>
 							</div>
 							<div class="timeline-panel">
@@ -137,7 +185,7 @@
 						</li>
 						<li class="timeline-inverted">
 							<div class="timeline-image">
-								<a href="#ayahuasca20151031" class="portfolio-link" data-toggle="modal"> <img class="img-circle img-responsive" src="img/rituais/ayahuasca_icon.jpg" alt="">
+								<a href="#ayahuasca20151031" class="portfolio-link" data-toggle="modal"> <img class="img-circle img-responsive" src="img/rituais/vivencia-xamanica-abril-16-icon.jpg" alt="">
 								</a>
 							</div>
 							<div class="timeline-panel">
