--- a/index.html
+++ b/index.html
@@ -98,14 +98,46 @@
 	<section id="proximos_eventos">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-12 text-center">
-					<div style="max-width: 500px; align: center">
+				<div class="col-lg-12 text-center"">
+					<div style="width:100%; max-width: 700px; margin: 0 auto">
 						<h2>Próximos Rituais</h2>
 						<img width="100%" src="img/rituais/vivencia-xamanica-abril-16.jpg">	
 					</div>
 				</div>
+						<p>&nbsp;</p>
+				<div class="col-lg-12 text-center intro-text">
+					<div class="intro-lead-in">Vivência Xamânica</div>
+					<div class="col-lg-12 text-center">
+						<p>Estaremos fazendo uma viagem em nossa MORADA INTERIOR, vamos trabalhar nosso SILÊNCIO, onde é possível manter o diálogo com DEUS.</p>
+						<p>Nossa introspecção acontecerá com os Rituais Xamânicos, Atividades Diárias, Vídeos, Palestras , Ritual do Cachimbo e Tenda do Suor (Encontro com a Mãe Terra).</p>
+						<p>Início : 21 de Abril às 10:00 horas</p>
+						<p>Término : 24 de Abril às 13:00 Horas</p>
+						<p>Energia de Troca : R$ 150,00</p>
+						<p> </p>
+						<p>RITUAL “ABERTO” COMEMORAÇÃO DE ANIVERSÁRIO – 23 DE ABRIL</p>
+						<p>Os portões estarão abertos a partir das 16:00 horas , o Ritual iniciará as 17:00 horas pontualmente.</p>
+						<p>Energia de Troca : R$ 50,00</p>
+						<p> </p>
+						<p>Para maior comodidade e organização do espaço, pedimos aos interessados, sua confirmação na vivência e o depósito na conta abaixo até 15/04/2016 de 50% valor e restante em sua chegada.</p>
+						<p>Enviar confirmação via e-mail : marciafilipe00@hotmail.com</p>
+						<p>Banco Bradesco</p>
+						<p>Agencia : 00090</p>
+						<p>Conta Corrente : 0166738-6</p>
+						<p>Luiz Carlos Fernandes Carneiro</p>
+						<p>CPF : 257.468.708-62</p>
+						<p>Nota : enviar confirmação via e-mail : marciafilipe00@hotmail.com</p>
+						<p>O QUE LEVAR :</p>
+						<p>Os participantes devem levar produtos  de higiene pessoal , colchonete e cobertor.</p>
+						<p>03 trocas de roupa,  devido ao calor .</p>
+						<p>Homens : Calça e Camiseta .</p>
+						<p>Mulheres : Saia, Calça Legging e camiseta .</p>
+						<p>AMBOS : 01 bermuda e camiseta velha para uso na TENDA DO SUOR .</p>
+						<p>Levar um tênis e um chinelo confortável .</p>
+						<p>Não se esqueçam do repelente.</p>
+					</div>
+				</div>
 				<div class="col-lg-12 text-center">
-					<div style="max-width: 500px; align: center">
+					<div style="max-width: 500px; margin: 0 auto">
 						<p>&nbsp;</p>
 						<p><a class="a-blue" href="docs/vivencia-xamanica-abril-16.docx">Baixe o documento com os detalhes aqui!</a></p>
 					</div>
@@ -149,7 +181,7 @@
 					<ul class="timeline">
 						<li>
 							<div class="timeline-image">
-								<a href="#ayahuasca20151031" class="portfolio-link" data-toggle="modal"> <img class="img-circle img-responsive" src="img/rituais/ceuvivavida-20160404-icon.jpg" alt="">
+								<a href="#ayahuasca20151031" class="portfolio-link" data-toggle="modal"> <img class="img-circle img-responsive" src="img/rituais/vivencia-xamanica-abril-16-icon.jpg" alt="">
 								</a>
 							</div>
 							<div class="timeline-panel">
@@ -167,7 +199,7 @@
 						</li>
 						<li class="timeline-inverted">
 							<div class="timeline-image">
-								<a href="#ayahuasca20151031" class="portfolio-link" data-toggle="modal"> <img class="img-circle img-responsive" src="img/rituais/ayahuasca_icon.jpg" alt="">
+								<a href="#ayahuasca20151031" class="portfolio-link" data-toggle="modal"> <img class="img-circle img-responsive" src="img/rituais/vivencia-xamanica-abril-16-icon.jpg" alt="">
 								</a>
 							</div>
 							<div class="timeline-panel">
