--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
 	</section>
 
 	<!-- Team Section -->
-	<section id="equipe" class="bg-light-gray">
+	<section id="equipe" class="bg-light-gray" style="display:none">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12 text-center">
