--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
 					<span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand page-scroll" href="#page-top">Céu</a>
+				<a class="navbar-brand page-scroll" href="#page-top">CLC e CVV</a>
 			</div>
 
 			<!-- Collect the nav links, forms, and other content for toggling -->
@@ -472,7 +472,7 @@
 					<br />
 					<h4 class="text-title">Restrições à participação nos trabalhos com a Ayahuasca:</h4>
 
-					<p class="large text-muted">- Pessoas que tomam remédio tarja preta devem parar de tomar 03 dias antes do trabalho, caso não haja restrição médica.</p>
+					<p class="large text-muted">- Pessoas que tomam remédio tarja preta, caso não haja restrição médica, entrar em contato para mais informações.</p>
 					<p class="large text-muted">- Não é permitido às pessoas com problemas cardíacos, inclusive as que utilizem marca-passo.</p>
 					<p class="large text-muted">- Não é permitido às pessoas com problemas psiquiátricos.</p>
 					<p class="large text-muted">- Dentro do Instituto é proibido usar cigarro.</p>
