Adicionando Texto Viver Agora

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 					<div class="intro-lead-in">Sagrada Ayahuasca e Medicina do Rapé</div>
 					<div class="col-lg-12 text-center">
 						<p>Ritual de Curas e Bênçãos e Medicina do Rapé em 02/05 as 20:30 horas (pontualmente).</p>
-						<p>O irmão que desejar realizar a cerimônia do rape será r$ 10,00</p>
+						<p>O irmão que desejar realizar a cerimônia do rapé será R$ 10,00</p>
 					</div>
 				</div>
 			</div>
@@ -124,12 +124,37 @@
 				<div class="col-lg-12 text-center">
 					<h2>Leitura</h2>
 					<p class="large text-muted">&nbsp;</p>
-					<h3>OBSTÁCULOS</h3>
-					<p class="large text-muted">Certo dia, um rei ordenara que se colocasse uma pedra enorme no meio de uma das estradas de seu reino.</p>
+					<h3>VIVER AGORA</h3>
+					<p class="large text-muted">Este é o teu momento de viver intensamente a realidade da vida.</p>
 					<div id="divleitura1" class="collapse">
-					<p class="large text-muted">Então, o rei se escondera próximo ao local para ficar observando se alguém tiraria a imensa rocha do caminho. Alguns mercadores e homens muito ricos do reino passaram por ali e simplesmente deram a volta pela pedra. Alguns até esbravejaram contra o rei, dizendo que ele não mantinha as estradas limpas, mas nenhum deles tentou sequer mover a pedra dali.</p>
-					<p class="large text-muted">De repente, passa um camponês com uma boa carga de vegetais. Ao se aproximar da imensa rocha, ele põe de lado a sua carga e tenta remover a rocha dali. Após muito esforço e suor, ele finalmente consegue mover a pedra para fora da estrada. Então, o camponês volta a pegar sua carga de vegetais, quando nota que havia uma bolsa no local onde, pouco antes, estava a pedra. A bolsa continha muitas moedas de ouro e uma nota escrita pelo rei, que dizia que o ouro era para a pessoa que tivesse removido a pedra do caminho.</p> 
-					<p class="large text-muted">O camponês aprendeu o que muitos de nós nunca entendemos: todo obstáculo contém uma oportunidade para melhorarmos nossa condição .</p>
+					<p class="large text-muted">Desnecessário recordar que, agora, o teu momento presente é relevante para a aquisição dos bens inestimáveis para o Espírito eterno.</p>
+					<p class="large text-muted">Há muito desperdício de tempo, que se aplica nas considerações do passado como em torno das ansiedades do futuro.</p>
+					<p class="large text-muted">A tomada de consciência é um trabalho de atualidade, de valorização das horas, de realização constante.</p>
+					<p class="large text-muted">A vida é para ser vivida agora.</p>
+					<p class="large text-muted">Postergar experiências significa prejuízo em crescimento na economia da vida.</p>
+					<p class="large text-muted">Antecipar ocorrências representa precipitação de fatos que, talvez, não sucederão, conforme agora tomam curso.</p>
+					<p class="large text-muted">As emoções canalizadas em relação ao passado ou ao futuro dissipam ou gastam a energia vital, que deve ser utilizada na ação do momento.</p>
+					<p class="large text-muted">&nbsp;</p>
+					<p class="large text-muted">&nbsp;</p>
+					<p class="large text-muted">Se vives recordando o passado ou ansiando pelo futuro perdes a contribuição do presente, praticamente nada reservando para hoje.</p>
+					<p class="large text-muted">O momento atual é a vida, que resulta das atividades pretéritas e elabora o programa do porvir.</p>
+					<p class="large text-muted">Encoraja-te a viver hoje, sentindo cada instante e valorizando-o mediante a consciência das bênçãos que se encontram à tua disposição.</p>
+					<p class="large text-muted">A vida é um sublime dom de Deus.</p>
+					<p class="large text-muted">Naturalmente, quando recebes um presente de alguém sentes o desejo irrefreável de agradecer, de louvar, de bendizer.</p>
+					<p class="large text-muted">Desse modo, agradece a Deus o sublime legado, que é a tua vida, por Ele concedido.</p>
+					<p class="large text-muted">&nbsp;</p>
+					<p class="large text-muted">&nbsp;</p>
+					<p class="large text-muted">Deus, nosso Pai de infinita justiça e bondade:</p>
+					<p class="large text-muted">Como é bom agradecer pela vida, por esta oportunidade sem igual de fazer parte de Teu Universo resplandecente.</p>
+					<p class="large text-muted">Brilha meu coração quando, ao observar o cântico da Tua natureza, percebe que tudo é feliz e cumpre seu papel resignadamente.</p>
+					<p class="large text-muted">Brilha meu coração quando compreendo Tuas leis perfeitas a reger o cosmo; das leis que equilibram os corpos no espaço às leis morais que harmonizam as relações humanas.</p>
+					<p class="large text-muted">Brilha meu coração ao saber que todos humanos irão para a felicidade e que, embora acampemos agora em campos de aflição e dúvida, o passar das eras está construindo em nós as bases de dias felizes.</p>
+					<p class="large text-muted">Brilha meu coração, hoje, agora, enquanto me dou conta de Ti, de mim, de meu próximo e percebo que estamos todos entrelaçados, e que a felicidade depende de como cuido de Ti, de mim e de meu próximo.</p>
+					<p class="large text-muted">Brilha meu coração que é Teu, Pai amado. E a luz que ele emite é a gratidão da criatura para com o Seu Criador.</p>
+					<p class="large text-muted">É um despertar decisivo para a verdadeira vida, agora, aqui, na imensidão de minha alma encantada ao descobrir-Te, gradual e definitivamente.</p>
+					<p class="large text-muted">&nbsp;</p>
+					<p class="large text-muted">&nbsp;</p>
+					<p class="large text-muted">Excelente Semana Planeta !!</p>
 					</div>
 					<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#divleitura1">Ler Mais</button>
 				</div>
