--- a/index.html
+++ b/index.html
@@ -103,7 +103,6 @@
 						<h2>Próximos Rituais</h2>
 						<p>&nbsp;</p>
 						<h3 style="text-align:center">Segunda - 16 de Maio - das 20h30 até 00h30</h3>
-						<p style="text-align:center">Clique na imagem para ver mais</p>
 						<img width="100%" src="img/rituais/ceuvivavida-20160516.jpg">
 					</div>
 				</div>
@@ -246,6 +245,7 @@
 								</div>
 								<div class="timeline-body">
 									<p class="text-muted">O Cachimbo Sagrado é um dos três instrumentos mais sagrados do xamã, assim como o tambor e o maracá!</p>
+									<p class="text-muted">Clique na imagem para ver mais!</p>
 								</div>
 							</div>
 						</li>
