quando começa o amor

--- a/index.html
+++ b/index.html
@@ -136,6 +136,46 @@
 				<div class="col-lg-12 text-center">
 					<h2>Leitura</h2>
 					<p class="large text-muted">&nbsp;</p>
+					<h3>Quando começa o amor?</h3>
+						<p class="large text-muted">Olhando esses amores que andam pelo mundo, dando demonstrações tão extraordinárias da excelência do sentimento, nos perguntamos: Quando começamos a amar?</p>
+						<p class="large text-muted">Nascemos no seio de uma família e amamos nossos pais. Convivemos com irmãos, familiares próximos e vamos dilatando essa nossa capacidade de amar.</p>
+						<p class="large text-muted">Comovente é registrar o amor de irmãos que se alonga no tempo. Irmãos que se dedicam a outros irmãos.</p>
+					<div id="divleitura1" class="collapse">
+						<p class="large text-muted">Crianças que, mal começam a falar e dar conta de si próprias, expressam extremos cuidados pelo irmão com necessidades especiais.</p>
+						<p class="large text-muted">Algumas chegam a dizer, com todas as palavras: Sempre vou cuidar de você!</p>
+						<p class="large text-muted">E se o dizem, o fazem. Os fatos, todos os dias, nos trazem notícias de irmãos dedicados. Irmãos que chegam a renunciar a suas próprias vidas para atender aquele que necessita de atenção maior.</p>
+						<p class="large text-muted">Mas, quando tudo isso começa? Qual o mistério desses laços tão fortes?</p>
+						<p class="large text-muted">Aprendemos, na Doutrina Espírita, que viajamos através do tempo e das tantas vidas, reencarnando vezes muitas nos mesmos círculos familiares.</p>
+						<p class="large text-muted">Nem sempre com o mesmo parentesco, mas, próximos, de forma a irmos exercitando o amor de pais, de irmãos, de primos, tios.</p>
+						<p class="large text-muted">Repetimos experiências junto a amigos que se nos tornam verdadeiros irmãos. Amigos com os quais convivemos na infância, atravessamos a adolescência e prosseguimos na madureza dos anos.</p>
+						<p class="large text-muted">Uma foto recentemente publicada na Internet nos demonstra essa realidade do amor que antecede a vida física.</p>
+						<p class="large text-muted">O casal americano Ian e Brittani Mcintire soube que seriam pais de dois herdeiros, um menino e uma menina.</p>
+						<p class="large text-muted">Mason, o menino, apresenta uma deficiência cardíaca e uma deformação no cérebro.</p>
+						<p class="large text-muted">Ele pesa somente duzentos e cinquenta e cinco gramas, enquanto a irmã pesa um quilo.</p>
+						<p class="large text-muted">Segundo as indicações médicas, a chance de sobrevivência de Mason seria uma cirurgia cardíaca, inviável pelos problemas do cérebro.</p>
+						<p class="large text-muted">A apreensiva situação ganhou uma tonalidade mais alegre, quando o ultrasom mostrou o bebê segurando a mão de sua irmã, no útero materno.</p>
+						<p class="large text-muted">A mãe emocionada, declarou: Eu o carrego mas a única que pode estar ali, com ele, é ela. E o está segurando.</p>
+						<p class="large text-muted">É reconfortante saber que, haja o que houver, ele não estará sozinho.</p>
+						<p class="large text-muted">Vendo a imagem, que se tornou viral na Internet, cogitamos do seu significado profundo.</p>
+						<p class="large text-muted">A irmãzinha, que o segura pela mão, estará dizendo: Fique, lute, não tema?</p>
+						<p class="large text-muted">Estará passando energias revitalizadoras ao irmãozinho? Desejará que ele nasça, e que possa estar ao seu lado?</p>
+						<p class="large text-muted">De onde vêm essas almas, nos indagamos. Quantas vidas terão realizado juntas?</p>
+						<p class="large text-muted">Se decidiram serem gestadas juntas, bons motivos existem, com certeza. Motivos que se perdem na curva do tempo e falam de uma afeição profunda.</p>
+						<p class="large text-muted">Se Mason conseguirá vir à luz e sobreviver, somente Deus o sabe.</p>
+						<p class="large text-muted">O que é certo é que o amor o sustenta, e lhe insufla ânimo.</p>
+						<p class="large text-muted">O amor o fortifica e aguarda que a vida se concretize, no plano físico, para prosseguirem juntos.</p>
+						<p class="large text-muted">Doces mistérios do amor que se perpetua no tempo...</p>
+						<p class="large text-muted">Excelente Semana !!</p>
+					</div>
+					<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#divleitura1">Ler Mais</button>
+				</div>
+			</div>
+		</div>
+		<div class="container" style="display:none">
+			<div class="row">
+				<div class="col-lg-12 text-center">
+					<h2>Leitura</h2>
+					<p class="large text-muted">&nbsp;</p>
 					<h3>VIVER AGORA</h3>
 					<p class="large text-muted">Este é o teu momento de viver intensamente a realidade da vida.</p>
 					<p class="large text-muted">Desnecessário recordar que, agora, o teu momento presente é relevante para a aquisição dos bens inestimáveis para o Espírito eterno.</p>
