--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 					<span class="fa-stack fa-4x"> <i class="fa fa-circle fa-stack-2x text-primary"></i> <i class="fa fa-cogs fa-stack-1x fa-inverse"></i>
 					</span>
 					<h4 class="service-heading">Dedicação</h4>
-					<p class="text-muted">Atravéz da dedicação de trabalhadores da luz, fazemos o nosso Instituto Luz e Caridade e Ceú Viva Vida uma grande família.</p>
+					<p class="text-muted">Atravéz da dedicação de trabalhadores da luz, fazemos o nosso Instituto Luz e Caridade e Céu Viva Vida uma grande família.</p>
 				</div>
 				<div class="col-md-4">
 					<span class="fa-stack fa-4x"> <i class="fa fa-circle fa-stack-2x text-primary"></i> <i class="fa fa-eye fa-stack-1x fa-inverse"></i>
