--- a/index.html
+++ b/index.html
@@ -135,6 +135,14 @@
 						<a href="#portfolioSagradoFemininoEncontro" class="portfolio-link" data-toggle="modal"><img width="100%" src="img/rituais/sagrado_feminino_1805.jpg"></a>
 					</div>
 				</div>
+				<p>&nbsp;</p>
+				<p>&nbsp;</p>
+				<div class="col-lg-12 text-center">
+					<div style="width:100%; max-width: 700px; margin: 0 auto">
+						<h3 style="text-align:center">Sábado - 18 de Junho - das 8h00 até 22h00</h3>
+						<img width="100%" src="img/rituais/Vivencia Xamanica 20160618.jpg">
+					</div>
+				</div>
 			</div>
 		</div>
 	</section>
