--- a/index.html
+++ b/index.html
@@ -323,6 +323,21 @@
 								</div>
 							</div>
 						</li>
+						<li class="timeline-inverted">
+							<div class="timeline-image">
+								<a href="#portfolioKambo" class="portfolio-link" data-toggle="modal"><img class="img-circle img-responsive" src="img/rituais/kambo_icon.jpg" alt=""></a>
+							</div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h4>Kambô</h4>
+									<h4 class="subheading">18 de Junho de 2016</h4>
+								</div>
+								<div class="timeline-body">
+									<p class="text-muted">A técnica do Kambô é uma técnica indígena para tratamento de doenças!</p>
+									<p class="text-muted">Clique na imagem para ver mais!</p>
+								</div>
+							</div>
+						</li>
 					</ul>
 				</div>
 			</div>
@@ -850,7 +865,7 @@
 	</div>
 
 	<!-- Portfolio Modal 3 -->
-	<div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-hidden="true">
+	<div class="portfolio-modal modal fade" id="portfolioKambo" tabindex="-1" role="dialog" aria-hidden="true">
 		<div class="modal-content">
 			<div class="close-modal" data-dismiss="modal">
 				<div class="lr">
@@ -862,18 +877,32 @@
 					<div class="col-lg-8 col-lg-offset-2">
 						<div class="modal-body">
 							<!-- Project Details Go Here -->
-							<h2>Project Name</h2>
-							<p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-							<img class="img-responsive img-centered" src="img/portfolio/treehouse-preview.png" alt="">
-							<p>
-								Treehouse is a free PSD web template built by <a href="https://www.behance.net/MathavanJaya">Mathavan Jaya</a>. This is bright and spacious design perfect for people or startup companies
-								looking to showcase their apps or other projects.
-							</p>
-							<p>
-								You can download the PSD template in this portfolio sample item at <a href="http://freebiesxpress.com/gallery/treehouse-free-psd-web-template/">FreebiesXpress.com</a>.
-							</p>
+							<h2>Kambô</h2>
+							<p class="item-intro text-muted">A técnica do Kambô é uma técnica indígena para tratamento de doenças.</p>
+							<img class="img-responsive img-centered" src="img/rituais/kambo_vacina.jpg" alt="">
+							<p>O kambô é uma resina retirada de uma perereca que vive na Amazônia, a Phillomedusa bicolor.</p>
+							<p>Essa resina contém peptídeos analgésicos e de fortalecimento do sistema imunológico que provocam a destruição de microrganismos patogênicos.</p>
+							<p>E ela é usada como se fosse uma vacina por nativos da Amazônia.</p>
+							<p>A aplicação é realizada sobre a pele e transportada rapidamente para todo o corpo pelos vasos linfáticos.</p>
+							<p>Os índios indicam a vacina para qualquer distúrbio e desequilíbrio, afirmam que purifica o sangue eliminando as impurezas, mas quem não tem nenhum sintoma usa o kambô para reforçar a imunidade.</p>
+							<p>Após a aplicação, é indescritível o estado de conscientização e clareza de pensamentos; a sensação de harmonia e de felicidade é visível; os sonhos, a percepção e a intuição melhoram; a autoestima retorna.</p>
+							<p>Diz a lenda que os índios da aldeia estavam muito doentes e de tudo havia feito o pajé para curá-los.</p>
+							<p>Todas as ervas medicinais que conhecia foram usadas, mas nenhuma livrara seu povo da agonia.</p>
+							<p>O pajé então se embrenhou na floresta e, sob os efeitos da Ayahuasca, recebeu a visita do grande Deus.</p>
+							<p>Este trazia nas mãos uma rã, da qual tirou uma secreção esbranquiçada e ensinou como deveria ser feita a aplicação dessa secreção nos enfermos.</p>
+							<p>Voltando à aldeia da tribo, e seguindo as orientações que havia recebido, o pajé pôde curar seus irmãos índios.</p>
+							<p>A história pode nos parecer exótica, mas a perereca existe.</p>
+							<p>Ela recebeu dos índios catuquinas a denominação de kambô, também podendo ser chamada de kampum ou kempô dependendo da tribo indígena.</p>
+							<p>E é usada pelos indígenas para prevenir, curar ou afastar o “panema” – conhecido entre os índios e caboclos como preguiça, baixo-astral, má sorte (na caça, na pesca, na colheita ou na conquista amorosa).</p>
+							<p>O curandeiro guarda a secreção da perereca numa espátula de madeira gerando pequenas queimaduras na pele, com um pedaço de cipó (titica) em brasa, aplicando a secreção nas queimaduras.</p>
+							<p>O efeito da “vacina do sapo” – como é popularmente conhecida – é curto, porém muito forte.</p>
+							<p>Ocorre uma forte onda de calor, que sobe pelo corpo até a cabeça.</p>
+							<p>A dilatação dos vasos sanguíneos parece provocar uma circulação mais veloz do sangue, deixando o rosto vermelho.</p>
+							<p>Em seguida a pessoa fica pálida, a pressão baixa, podendo provocar náuseas, vômitos e/ou diarréia.</p>
+							<p>Esse processo dura cerca de 15/20 minutos, com uma sensação muito desagradável, mas aos poucos a pessoa retorna à normalidade.</p>
+							<p>Em seguida a pessoa se sente mais leve, como se tivesse feito uma boa limpeza, presenciando uma maior disposição.</p>
 							<button type="button" class="btn btn-primary" data-dismiss="modal">
-								<i class="fa fa-times"></i> Close Project
+								<i class="fa fa-times"></i> Fechar Kambô
 							</button>
 						</div>
 					</div>
